--- a/개발문서.md
+++ b/개발문서.md
@@ -3,6 +3,7 @@
 
 - 21.06.22    
   - 최숙 : react 개발 환경 재구축, react와 bootstrap 연동, navbar 구현 
+  - 채영: 설문조사 페이지 생성, 설문조사 선택 틀 구현
 
 
 
@@ -10,5 +11,13 @@
 #### ✅ 감정 결과 페이지
 - App.js: Navbar 구현 및 bootstrap과 react 연동     
 - Component: 컴포넌트 파일 넣어두는 곳
+
+#### ✅ 설문조사 페이지
+- survey.html: 설문조사 페이지 화면
+            test-question // 한 페이지에 들어갈 설문조사 틀 전체
+              question 
+                statement // 질문 내용
+                radiogroup // 선택지
+                decision mobile // 동의-비동의 텍스트
 
 ---
