--- a/개발문서.md
+++ b/개발문서.md
@@ -14,10 +14,10 @@
 
 #### ✅ 설문조사 페이지
 - survey.html: 설문조사 페이지 화면
-            test-question // 한 페이지에 들어갈 설문조사 틀 전체
-              question 
-                statement // 질문 내용
-                radiogroup // 선택지
-                decision mobile // 동의-비동의 텍스트
+    - test-question // 한 페이지에 들어갈 설문조사 틀 전체
+      - question
+        - statement // 질문 내용
+        - radiogroup // 선택지
+        - decision mobile // 동의-비동의 텍스트
 
 ---
