--- a/개발문서.md
+++ b/개발문서.md
@@ -4,7 +4,7 @@
 - 21.06.22    
   - 최숙 : react 개발 환경 재구축, react와 bootstrap 연동, navbar 구현 
   - 채영: 설문조사 페이지 생성, 설문조사 선택 틀 구현
-
+  - 나윤: 음식점 추천 페이지 이미지 파일 틀 구현, 구글 지도 api 연동
 
 
 ### 📍 파일 설명(사용한 클래스, 메소드, 변수 내용 기록)
