--- a/개발문서.md
+++ b/개발문서.md
@@ -6,11 +6,15 @@
   - 채영: 설문조사 페이지 생성, 설문조사 선택 틀 구현
   - 나윤: 음식점 추천 페이지 이미지 파일 틀 구현, 구글 지도 api 연동
 
+- 21.06.23
+  - 최숙 : 구글 웹 폰트 API와 페이지 CDN방식으로 연동, 회원가입 버튼 커스터마이징을 통해 기존 버튼 폰트들과 색 맞춤
 
 ### 📍 파일 설명(사용한 클래스, 메소드, 변수 내용 기록)
 #### ✅ 감정 결과 페이지
 - App.js: Navbar 구현 및 bootstrap과 react 연동     
 - Component: 컴포넌트 파일 넣어두는 곳
+- APP.css : App.js 커스터마이징으로 꾸미는 용도
+- Index.html : 외부 라이브러리 및 API, 프레임워크 CDN 방식로 연동시켜놓는 파일 
 
 #### ✅ 설문조사 페이지
 - survey.html: 설문조사 페이지 화면
