--- a/개발문서.md
+++ b/개발문서.md
@@ -8,6 +8,7 @@
 
 - 21.06.23
   - 최숙 : 구글 웹 폰트 API와 페이지 CDN방식으로 연동, 회원가입 버튼 커스터마이징을 통해 기존 버튼 폰트들과 색 맞춤
+  - 나윤 : 음식점 버튼 생성
 
 ### 📍 파일 설명(사용한 클래스, 메소드, 변수 내용 기록)
 #### ✅ 감정 결과 페이지
