UPDATE : 개발문서에 진행상황 추가
- chart.js 라이브러리 리액트에 연동
- 방사형 차트 구현

--- a/개발문서.md
+++ b/개발문서.md
@@ -11,9 +11,18 @@
   - 나윤 : 음식점 버튼 생성
   - 채영 : 이전 다음 버튼 생성, 2번째 질문 추가 (이미지 버튼으로 시도하려고 했으나 안돼서 시도중)
 
+- 21.06.24
+  - 최숙 : chart.js 라이브러리 리액트에 직접 연동 및 radar chart(방사형 차트) 구현
+
 ### 📍 파일 설명(사용한 클래스, 메소드, 변수 내용 기록)
 #### ✅ 감정 결과 페이지
-- App.js: Navbar 구현 및 bootstrap과 react 연동     
+- App.js
+  - 구현 목록
+    -  Navbar : 네비게이션 바
+    -  radar chart : 방사형 차트 [option - 차트 옵션, 크기 및 라벨 조정을 위해 따로 달아 둠 / data - 차트에 들어갈 데이터]
+  - 외부 라이브러리 및 프레임워크 연동 목록
+    - bootstrap
+    - chart.js     
 - Component: 컴포넌트 파일 넣어두는 곳
 - APP.css : App.js 커스터마이징으로 꾸미는 용도
 - Index.html : 외부 라이브러리 및 API, 프레임워크 CDN 방식로 연동시켜놓는 파일 
