update: 개발문서.md

--- a/개발문서.md
+++ b/개발문서.md
@@ -13,7 +13,7 @@
 
 - 21.06.24
   - 최숙 : chart.js 라이브러리 리액트에 직접 연동 및 radar chart(방사형 차트) 구현
-  - 나윤 : jquery로 버튼 클릭시 음식점 사진 div 변경
+  - 나윤 : jquery로 버튼 클릭시 음식점 사진 변경, 마커 이벤트 추가
 
 ### 📍 파일 설명(사용한 클래스, 메소드, 변수 내용 기록)
 #### ✅ 감정 결과 페이지
