--- a/개발문서.md
+++ b/개발문서.md
@@ -14,6 +14,7 @@
 - 21.06.24
   - 최숙 : chart.js 라이브러리 리액트에 직접 연동 및 radar chart(방사형 차트) 구현
   - 나윤 : jquery로 버튼 클릭시 음식점 사진 변경, 마커 이벤트 추가
+  - 채영 : radio 버튼 이미지 추가. area-checked로 선택 확인
 
 ### 📍 파일 설명(사용한 클래스, 메소드, 변수 내용 기록)
 #### ✅ 감정 결과 페이지
