--- a/개발문서.md
+++ b/개발문서.md
@@ -18,6 +18,7 @@
 
 - 21.06.25
   - 최숙 : 감정결과 해석 섹션 생성 및 배치, bootstrap 이용하여 효능 설명 카드 구현 
+  - 나윤 : 지도 마커 말풍선 구현
 
 ### 📍 파일 설명(사용한 클래스, 메소드, 변수 내용 기록)
 #### ✅ 감정 결과 페이지
