UPDATE : 개발문서 수정
0628 진행상황 추가

--- a/개발문서.md
+++ b/개발문서.md
@@ -23,6 +23,9 @@
 - 21.06.26
   - 최숙 : 카드 뒤집기 효과 적용 
 
+- 21.06.28
+  - 최숙: 추천 음식 섹션 추가, 하드코딩으로 만들어서 데스트탑에서만 지원됨. 따라서 추후 부트스트랩으로 레이아웃 수정 예정
+
 ### 📍 파일 설명(사용한 클래스, 메소드, 변수 내용 기록)
 #### ✅ 감정 결과 페이지
 - App.js
