--- a/개발문서.md
+++ b/개발문서.md
@@ -26,6 +26,7 @@
 - 21.06.28
   - 최숙: 추천 음식 섹션 추가, 하드코딩으로 만들어서 데스트탑에서만 지원됨. 따라서 추후 부트스트랩으로 레이아웃 수정 예정
   - 채영: data.js추가, 질문내용과 선택지를 선택했을 때 해당 음식 맛에 연결되는 JS 작성. 결과 창은 추후 수정.
+  - 나윤: 네비게이션 바 추가, 지도와 음식점 설명 배치(위치 수정 필요), 버튼 클릭시 지도 데이터 변경 추후 추가.
 
 ### 📍 파일 설명(사용한 클래스, 메소드, 변수 내용 기록)
 #### ✅ 감정 결과 페이지
