UPDATE : 개발 문서.md
진단 결과 페이지 프론트엔드 1차적으로 구현 완료.

--- a/개발문서.md
+++ b/개발문서.md
@@ -24,7 +24,7 @@
   - 최숙 : 카드 뒤집기 효과 적용 
 
 - 21.06.28
-  - 최숙: 추천 음식 섹션 추가, 하드코딩으로 만들어서 데스트탑에서만 지원됨. 따라서 추후 부트스트랩으로 레이아웃 수정 예정
+  - 최숙: 추천 음식 섹션 및 음식점 추천 페이지로 이동하는 버튼 추가, 부트스트랩 이용하여 음식점 추천 페이지 반응형 웹으로 구현 완료
   - 채영: data.js추가, 질문내용과 선택지를 선택했을 때 해당 음식 맛에 연결되는 JS 작성. 결과 창은 추후 수정.
   - 나윤: 네비게이션 바 추가, 지도와 음식점 설명 배치(위치 수정 필요), 버튼 클릭시 지도 데이터 변경 추후 추가.
 
@@ -35,6 +35,8 @@
     -  Navbar : 네비게이션 바
     -  radar chart : 방사형 차트 [option - 차트 옵션, 크기 및 라벨 조정을 위해 따로 달아 둠 / data - 차트에 들어갈 데이터]
     -  card : 효능 설명하는 카드
+    -  image : 부트스트랩 이용하여 반응형 웹 형태로 구현완료
+    -  button : 음식점 추천 페이지로 이동하는 버튼
   - 외부 라이브러리 및 프레임워크 연동 목록
     - bootstrap
     - chart.js     
