--- a/개발문서.md
+++ b/개발문서.md
@@ -30,6 +30,9 @@
 
 - 21.07.03
   - 나윤: 부트스트랩 연동, 음식점 리뷰 카드 추가, 지도 및 음식점 설명 위치 수정, 구글 드라이브 이미지 파일 링크로 추가.
+
+- 21.07.05
+  - 최숙: 카드 뒤집기 효과 전면/후면 나누어 보이게 수정, 컴포넌트 간 넓이 조정
   
 ### 📍 파일 설명(사용한 클래스, 메소드, 변수 내용 기록)
 #### ✅ 감정 결과 페이지
