--- a/개발문서.md
+++ b/개발문서.md
@@ -33,6 +33,7 @@
 
 - 21.07.05
   - 최숙: 카드 뒤집기 효과 전면/후면 나누어 보이게 수정, 컴포넌트 간 넓이 조정
+  - 채영: 메인페이지 생성, carousel 화면 추가
   
 ### 📍 파일 설명(사용한 클래스, 메소드, 변수 내용 기록)
 #### ✅ 감정 결과 페이지
@@ -59,4 +60,7 @@
         - decision mobile // 동의-비동의 텍스트
         
 - data.js: 질문 내용과 비동의~동의 선택 시에 어떤 맛에 연결되는지 작성
+
+#### ✅ 메인 페이지
+- main.html: 메인페이지 화면
 ---
