--- a/개발문서.md
+++ b/개발문서.md
@@ -34,6 +34,9 @@
 - 21.07.05
   - 최숙: 카드 뒤집기 효과 전면/후면 나누어 보이게 수정, 컴포넌트 간 넓이 조정
   - 채영: 메인페이지 생성, carousel 화면 추가
+ 
+ - 21.08.09
+  - 나윤 : allresults, restaurant 페이지 라우팅
   
 ### 📍 파일 설명(사용한 클래스, 메소드, 변수 내용 기록)
 #### ✅ 감정 결과 페이지
