--- a/개발문서.md
+++ b/개발문서.md
@@ -38,6 +38,9 @@
  - 21.08.09
   - 나윤 : allresults, restaurant 페이지 라우팅
   
+ - 21.08.15
+  - 나윤 : 구글 api 지도 추가(오류: 위도/경도 오류, 컴포넌트끼리 겹쳐보임)
+  
 ### 📍 파일 설명(사용한 클래스, 메소드, 변수 내용 기록)
 #### ✅ 감정 결과 페이지
 - App.js
