--- a/개발문서.md
+++ b/개발문서.md
@@ -40,6 +40,9 @@
   
  - 21.08.15
   - 나윤 : 구글 api 지도 추가(오류: 위도/경도 오류, 컴포넌트끼리 겹쳐보임)
+
+- 21.08.23
+  - 최숙 : 버튼 누르면 input 창 뜨는 기능 추가 
   
 ### 📍 파일 설명(사용한 클래스, 메소드, 변수 내용 기록)
 #### ✅ 감정 결과 페이지
