--- a/개발문서.md
+++ b/개발문서.md
@@ -36,13 +36,16 @@
   - 채영: 메인페이지 생성, carousel 화면 추가
  
  - 21.08.09
-  - 나윤 : allresults, restaurant 페이지 라우팅
+    - 나윤 : allresults, restaurant 페이지 라우팅
   
  - 21.08.15
-  - 나윤 : 구글 api 지도 추가(오류: 위도/경도 오류, 컴포넌트끼리 겹쳐보임)
+    - 나윤 : 구글 api 지도 추가(오류: 위도/경도 오류, 컴포넌트끼리 겹쳐보임)
 
 - 21.08.23
   - 최숙 : 버튼 누르면 input 창 뜨는 기능 추가 
+
+- 21. 09.07
+  - 최숙 : 검색창 추가, 웹 폰트 변경(나눔고딕으로 변경), 리뷰 작성 버튼 변경   
   
 ### 📍 파일 설명(사용한 클래스, 메소드, 변수 내용 기록)
 #### ✅ 감정 결과 페이지
